# qmat

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  scratch.py  test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_pipeline.yml  publish.yml
docs/: .readthedocs.yaml  01_qCoeffs.ipynb  04_sdc.ipynb  06_initialization.ipynb  CODE_OF_CONDUCT.md  Makefile  SECURITY.md  conf.py  contributing.md  index.rst  installation.md  misc.md  notebooks.md  requirements.txt
docs/_build/doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree
docs/_build/doctrees/devdoc/: addRK.doctree  (+2 more)
docs/_build/html/: .buildinfo  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: custom.css
docs/devdoc/: addDiffOp.md  addPhiIntegrator.md  addPlayground.md  addRK.md  roadmap.md  structure.md  testing.md  updateDoc.md  versionUpdate.md
docs/misc/: index.md  security.md
docs/notebooks/: 01_qCoeffs.ipynb  02_rk.ipynb  03_qDelta.ipynb  04_sdc.ipynb  05_residuals.ipynb  11_nodeFormulation.ipynb  11_nonLinearRK.ipynb  11_prolongation.ipynb  12_initialization.ipynb  12_nonLinearRK.ipynb  12_nonLinearSDC.ipynb  13_nonLinearSDC.ipynb  14_phiIntegrator.ipynb  21_lagrange.ipynb  22_nodes.ipynb  README.md
examples/: burgers.py  example_1_burgers.py
qmat/: __init__.py  lagrange.py  mathutils.py  nodes.py  sdc.py  utils.py  vander.py
qmat/playground/: ex_burgers_integrate.py  ex_burgers_plot.py  ex_dahlquist2_integrate.py  ex_dahlquist2_plot.py  ex_dahlquist_plot.py  ex_oscillation.py  ex_two_freq_integrate.py  ex_two_freq_plot.py
qmat/playground/diff_eqs/: __init__.py  burgers.py  dahlquist.py  dahlquist2.py  de_solver.py  two_freq.py
qmat/playground/tests/: test_burgers.py  test_dahlquist.py  test_dahlquist2.py  test_sdc_burgers.py  test_two_freq.py
qmat/playground/time_integration/: rk_integration.py  sdc_integration.py
qmat/playgrounds/: __init__.py
qmat/playgrounds/martin/: ex_burgers_integrate.py  ex_burgers_plot.py  ex_dahlquist2_integrate.py  ex_dahlquist2_plot.py  ex_dahlquist_plot.py  ex_two_freq_integrate.py  ex_two_freq_plot.py
qmat/playgrounds/tibo/: README.md  __init__.py  imex.py  imexStabilityAdvDiffSDC.py  imexStabilityRK.py  imexStabilitySDC.py  lorenz.py  orthogonalPolynomials.py  stability.py  test.py
qmat/qcoeff/: __init__.py  butcher.py  collocation.py
qmat/qdelta/: __init__.py  algebraic.py  diag.py  min.py  mincoeffs.py  timescheme.py  timestepping.py
qmat/scripts/: stability.py
qmat/solvers/: __init__.py  dahlquist.py  generic.py  sdc.py  test.py
qmat/solvers/generic/: __init__.py  diffops.py  integrators.py
qmat/tests/: test_1_nodes.py  test_2_lagrange.py
qmat/tests/qcoeff/: test_convergence.py
qmat/tests/test_qcoeff/: test_base.py  test_convergence.py
qmat/tests/test_qdelta/: test_base.py  test_min.py  test_timestepping.py
qmat/utils/: __init__.py  num.py  sdc.py
tests/: requirements.txt  test_1_nodes.py  test_2_lagrange.py  test_3_mathutils.py  test_3_vander.py  test_4_sdc.py  test_4_utils.py  test_scripts.py
tests/test_qcoeff/: test_base.py  test_butcher.py  test_convergence.py
tests/test_qdelta/: test_base.py  test_diag.py  test_min.py  test_timestepping.py
tests/test_solvers/: test_dahlquist.py  test_diffops.py  test_generic.py  test_integrators.py  test_sdc.py
tutorials/: 01_qCoeffs.ipynb  02_rk.ipynb  03_qDelta.ipynb  04_sdc.ipynb  05_advanced.ipynb  05_prolongation.ipynb  runAll.sh
(+90 files in other folders)
